--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "Backend IKSE",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
+  "description": "Back-end IKSE",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
-  "license": "ISC",
+  "author": "Warner Hoefakker",
+  "license": "",
   "devDependencies": {
     "nodemon": "^1.19.4"
   },
