--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2",
-    "pg": "^8.6.0"
+    "sequelize": "^6.6.2"
   }
 }
